@@ -3,6 +3,7 @@ Changes for Labyrinth-DIUtils-ImageMagick
 
         - fixed license fields in META.json to be lists.
         - extended META test suite.
+        - can now set the quality of an image.
 
 5.06    2014-05-05
         - fixed distribution name in META.
